[package]
name = "uptix-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.30"
rust_socketio = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
hostname = "0.3"
tokio = { version = "1", features = ["full"] }
